# esp-screen-mirror

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  avi_player.c  avi_player.h  ft6336u_driver.c  ft6336u_driver.h  jpeg_decoder.c  jpeg_decoder.h  lv_port.c  lv_port.h  main.c  sdcard.c  sdcard.h  usb_screen.c  usb_screen.h  wifi_screen.c  wifi_screen.h  xl9555.c
tools/: image_convert.py  screen_mirror.py  test_serial.py  wifi_mirror.py
